# libalmath

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  appveyor.yml
.qi/: worktree.xml
almath/scenegraph/: gltfrigidbodysystembuilder.h  urdf.h  urdfrigidbodysystembuilder.h
mayaplugin/: CMakeLists.txt  README.txt  qiproject.xml
mayaplugin/modules/: FindMaya.cmake
mayaplugin/scripts/: showcaseSbrMayaPlugin.mel
mayaplugin/src/: mayaqianim.cpp  mayaqianim.h  mayaurdf.cpp  mayaurdf.h  plugin.cpp  utils.cpp  utils.h
mayaplugin/test/: CMakeLists.txt  getAlmodelutilsPrefixPath.in.mel  getAlposturePrefixPath.in.mel  getTestJulietteUrdfPath.in.mel  julietteY20MP201702.urdf  test_mayaplugin.cpp
src/scenegraph/: urdf.cpp
test/scenegraph/: test_gltf.cpp  test_urdf.cpp
toolchains/feeds/: win64-vs2015.xml
toolchains/feeds/xsl/: toolchain.xsl
